<resources>
    <string name="app_name">Android Lab</string>
    <string name="color_editor">Color Editor</string>
    <string name="calculator">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="slash">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="star">*</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="clear">X</string>
    <string name="notes_activity_title">Notes</string>
    <string name="add_note">Add</string>
    <string name="filter_by_priority">Filter by priority</string>
    <string name="filter_by_content">Filter by content</string>
    <string name="clear_filters">Clear filters</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="delete_note">Delete</string>
    <string name="edit_note">Edit</string>
    <string name="note_editor_title">Edit Note</string>
    <string name="note_editor_priority">Priority</string>
    <string name="note_editor_add_image">Add Image</string>
    <string name="note_editor_save_note">Save</string>
</resources>
